Dask experimental use in talking-data competition

--- a/kaggle/talkingdata-adtracking-fraud-detection/EDA-Features-Engg-1.ipynb
+++ b/kaggle/talkingdata-adtracking-fraud-detection/EDA-Features-Engg-1.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-17T15:29:36.163395Z",
-     "start_time": "2018-04-17T15:29:34.836070Z"
+     "end_time": "2018-04-25T10:52:57.908330Z",
+     "start_time": "2018-04-25T10:52:56.576515Z"
     }
    },
    "outputs": [],
@@ -89,8 +89,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-17T15:31:29.643290Z",
-     "start_time": "2018-04-17T15:29:37.415922Z"
+     "end_time": "2018-04-25T10:54:51.557069Z",
+     "start_time": "2018-04-25T10:52:59.478591Z"
     }
    },
    "outputs": [],
@@ -101,17 +101,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-17T15:32:07.306562Z",
-     "start_time": "2018-04-17T15:31:29.644522Z"
+     "end_time": "2018-04-25T09:54:51.070922Z",
+     "start_time": "2018-04-25T09:54:50.838448Z"
     }
    },
    "outputs": [],
    "source": [
+    "\n",
+    "df_train = dd.read_csv(\"data/train.csv\")\n",
+    "df_test = dd.read_csv(\"data/test.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-25T10:22:33.105276Z",
+     "start_time": "2018-04-25T10:22:33.096815Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dask Series Structure:\n",
+       "npartitions=118\n",
+       "    datetime64[ns]\n",
+       "               ...\n",
+       "         ...      \n",
+       "               ...\n",
+       "               ...\n",
+       "Name: click_time, dtype: datetime64[ns]\n",
+       "Dask Name: to_datetime, 590 tasks"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Dask Series Structure:\n",
+       "npartitions=14\n",
+       "    datetime64[ns]\n",
+       "               ...\n",
+       "         ...      \n",
+       "               ...\n",
+       "               ...\n",
+       "Name: click_time, dtype: datetime64[ns]\n",
+       "Dask Name: to_datetime, 70 tasks"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# dask version\n",
+    "meta = ('click_time', 'datetime64[ns]')\n",
+    "df_train.click_time.map_partitions(pd.to_datetime, meta=meta)\n",
+    "df_test.click_time.map_partitions(pd.to_datetime, meta=meta)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-25T10:55:24.040461Z",
+     "start_time": "2018-04-25T10:54:51.558301Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# pandas version\n",
     "df_train['click_time'] = pd.to_datetime(df_train['click_time'])\n",
-    "df_train['attributed_time'] = pd.to_datetime(df_train['attributed_time'])\n",
+    "#df_train['attributed_time'] = pd.to_datetime(df_train['attributed_time'])\n",
     "df_test['click_time'] = pd.to_datetime(df_test['click_time'])"
    ]
   },
@@ -120,8 +191,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-17T15:32:13.939941Z",
-     "start_time": "2018-04-17T15:32:07.307770Z"
+     "end_time": "2018-04-25T10:57:26.797989Z",
+     "start_time": "2018-04-25T10:57:20.126042Z"
     }
    },
    "outputs": [
@@ -137,6 +208,7 @@
     }
    ],
    "source": [
+    "# pandas version\n",
     "df_train['hour'] = df_train['click_time'].dt.hour\n",
     "df_test['hour'] = df_test['click_time'].dt.hour\n",
     "gc.collect()"
@@ -144,17 +216,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-17T15:32:57.930040Z",
-     "start_time": "2018-04-17T15:32:13.940977Z"
+     "end_time": "2018-04-25T10:59:21.578021Z",
+     "start_time": "2018-04-25T10:59:01.429357Z"
     }
    },
    "outputs": [],
    "source": [
-    "df_train.to_hdf('data/train_1.h5',\"table\",mode='w')\n",
-    "df_test.to_hdf('data/test_1.h5',\"table\",mode='w')"
+    "df_train.drop(axis=1,columns=['attributed_time'],inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-25T11:02:35.588070Z",
+     "start_time": "2018-04-25T11:02:32.254779Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_train.click_time = df_train.click_time.astype(np.int64)//10**9\n",
+    "df_test.click_time = df_test.click_time.astype(np.int64)//10**9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-25T10:23:28.518848Z",
+     "start_time": "2018-04-25T10:22:38.262648Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# dask version\n",
+    "df_train.compute();\n",
+    "df_test.compute();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-25T10:52:10.466258Z",
+     "start_time": "2018-04-25T10:50:34.575535Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# dask version\n",
+    "\n",
+    "dt_col = dd.from_pandas(pd.to_datetime(df_train['click_time'].compute()).dt.hour,npartitions=df_train.npartitions)\n",
+    "df_train.assign(hour=dt_col)\n",
+    "dt_col = dd.from_pandas(pd.to_datetime(df_test['click_time'].compute()).dt.hour,npartitions=df_test.npartitions)\n",
+    "df_test.assign(hour=dt_col)\n",
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-25T10:31:03.706286Z",
+     "start_time": "2018-04-25T10:29:33.835Z"
+    }
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-25T11:07:52.188889Z",
+     "start_time": "2018-04-25T11:05:50.252476Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_train.to_hdf('data/train_1.h5',\"table\",mode='w',format='table')\n",
+    "df_test.to_hdf('data/test_1.h5',\"table\",mode='w',format='table')"
    ]
   },
   {
