--- a/kaggle/talkingdata-adtracking-fraud-detection/EDA-Features-Engg-2-1_time_to_next_click.ipynb
+++ b/kaggle/talkingdata-adtracking-fraud-detection/EDA-Features-Engg-2-1_time_to_next_click.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-24T16:22:46.386645Z",
-     "start_time": "2018-04-24T16:22:45.068487Z"
+     "end_time": "2018-04-25T13:07:08.230423Z",
+     "start_time": "2018-04-25T13:07:06.884253Z"
     }
    },
    "outputs": [],
@@ -86,33 +86,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-24T16:22:57.977194Z",
-     "start_time": "2018-04-24T16:22:47.623786Z"
+     "end_time": "2018-04-25T13:07:54.441077Z",
+     "start_time": "2018-04-25T13:07:20.763536Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "11"
+       "220"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_train = pd.read_hdf(\"data/train_1.h5\",\"table\")\n",
+    "df_train = dd.read_hdf(\"data/train_1.h5\",\"table\")\n",
+    "df_train = dd.from_pandas(df_train.compute(),npartitions=64)\n",
     "gc.collect()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-04-24T16:22:58.865797Z",
@@ -120,22 +121,26 @@
     }
    },
    "outputs": [],
-   "source": [
-    "df_test = pd.read_hdf(\"data/test_1.h5\",\"table\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-24T16:22:58.880708Z",
-     "start_time": "2018-04-24T16:22:58.867064Z"
+     "end_time": "2018-04-25T13:07:54.453164Z",
+     "start_time": "2018-04-25T13:07:54.442261Z"
     }
    },
    "outputs": [],
    "source": [
-    "GROUP_BY_NEXT_CLICKS = [\n",
+    "GROUP_BY_NEXT_CLICKS_v0 = [\n",
+    "    \n",
+    "    # V1\n",
+    "    {'groupby': ['ip']}\n",
+    "]\n",
+    "\n",
+    "GROUP_BY_NEXT_CLICKS_v1 = [\n",
     "    \n",
     "    # V1\n",
     "    {'groupby': ['ip']},\n",
@@ -144,11 +149,13 @@
     "    {'groupby': ['ip', 'app']},\n",
     "    {'groupby': ['ip', 'channel']},\n",
     "    {'groupby': ['ip', 'os']},\n",
-    "    \n",
     "    # V3\n",
     "    {'groupby': ['ip', 'app', 'device', 'os', 'channel']},\n",
     "    {'groupby': ['ip', 'os', 'device']},\n",
-    "    {'groupby': ['ip', 'os', 'device', 'app']},\n",
+    "    {'groupby': ['ip', 'os', 'device', 'app']}\n",
+    "]\n",
+    "\n",
+    "GROUP_BY_NEXT_CLICKS_v2 = [\n",
     "    \n",
     "    {'groupby': ['ip','hour']},\n",
     "    {'groupby': ['ip', 'app', 'device', 'os', 'channel','hour']},\n",
@@ -157,52 +164,178 @@
     "    {'groupby': ['ip', 'app','hour']},\n",
     "    {'groupby': ['ip', 'channel','hour']},\n",
     "    {'groupby': ['ip', 'os','hour']},\n",
-    "    \n",
     "    {'groupby': ['app', 'device', 'os', 'channel']},\n",
     "    {'groupby': ['app', 'device', 'os']},\n",
-    "    \n",
-    "    {'groupby': ['app', 'device', 'os','hour']},\n",
+    "    {'groupby': ['app', 'device', 'os','hour']}\n",
     "]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-24T16:23:34.657404Z",
-     "start_time": "2018-04-24T16:23:34.629605Z"
+     "end_time": "2018-04-25T13:27:43.367152Z",
+     "start_time": "2018-04-25T13:27:43.312962Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n",
+      "<class 'pandas.core.series.Series'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "      <th>la</th>\n",
+       "      <th>lb</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>12</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>19</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   A   B   la   lb\n",
+       "0  1   1  NaN  4.0\n",
+       "1  1   5  4.0  3.0\n",
+       "2  1   7  2.0  2.0\n",
+       "3  2  12  NaN  7.0\n",
+       "4  2  19  7.0  4.0\n",
+       "5  2  20  1.0  1.0"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# dask test example\n",
+    "pdf = pd.DataFrame({\"A\":[1,1,1,2,2,2],\"B\":[1,5,7,12,19,20]})\n",
+    "ddf = dd.from_pandas(pdf,npartitions=1)\n",
+    "\n",
+    "def differ(x):\n",
+    "    print(type(x.diff()))\n",
+    "    return x.diff()\n",
+    "\n",
+    "def grad(x):\n",
+    "    return pd.Series(np.gradient(x,axis=0),index=x.index)\n",
+    "gp = ddf.groupby([\"A\"]).B\n",
+    "a=gp.apply(differ).compute()\n",
+    "b=gp.apply(grad).compute()\n",
+    "\n",
+    "\n",
+    "\n",
+    "ddf['la'] = a\n",
+    "ddf['lb'] = b\n",
+    "\n",
+    "# ddf.assign(la=a).compute()\n",
+    "ddf.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-04-25T13:31:54.198630Z",
+     "start_time": "2018-04-25T13:31:54.173175Z"
     }
    },
    "outputs": [],
    "source": [
     "\n",
     "\n",
-    "def add_time_to_next_click(GROUP_BY_NEXT_CLICKS):\n",
+    "def add_time_to_next_click(GROUP_BY_NEXT_CLICKS,df):\n",
     "    gc.collect()\n",
-    "    # Calculate the time to next click for each group\n",
     "    for spec in GROUP_BY_NEXT_CLICKS:\n",
-    "\n",
-    "        # Name of new feature\n",
-    "        new_feature = '{}_nextClick'.format('_'.join(spec['groupby']))    \n",
-    "\n",
-    "        # Unique list of features to select\n",
+    "        next_click = 'nc_{}'.format('_'.join(spec['groupby']))\n",
+    "        grad_click = 'gc_{}'.format('_'.join(spec['groupby']))\n",
     "        all_features = spec['groupby'] + ['click_time']\n",
     "\n",
-    "        # Run calculation\n",
-    "        print(f\">> Grouping by {spec['groupby']}, and saving time to next click in: {new_feature}\")\n",
-    "        group = df_train[all_features].groupby(spec['groupby']).click_time  \n",
-    "        gp = group.transform(lambda x: x.diff().shift(-1)).dt.seconds\n",
-    "\n",
-    "        df_train[new_feature] = gp\n",
+    "        print(f\"Grouping by {spec['groupby']}, and saving time to next click in: {next_click}\")\n",
+    "        # group = df[all_features].groupby(spec['groupby']).click_time  \n",
+    "        # gp = group.transform(lambda x: x.diff().shift(-1))\n",
+    "        def differ(x):\n",
+    "            return x.diff().shift(-1)\n",
     "        \n",
-    "        gp=None\n",
-    "        del gp\n",
+    "        def grad(x):\n",
+    "            return pd.Series(np.gradient(x,axis=0),index=x.index)\n",
+    "        group = df.groupby(spec['groupby']).click_time\n",
+    "        gp1 = group.apply(differ).compute()\n",
+    "        gp2 = group.apply(grad).compute()\n",
     "        \n",
-    "        group = df_test[all_features].groupby(spec['groupby']).click_time  \n",
-    "        gp = group.transform(lambda x: x.diff().shift(-1)).dt.seconds\n",
-    "\n",
-    "        df_test[new_feature] = gp\n",
+    "        df[next_click] = gp1\n",
+    "        df[grad_click] = gp2\n",
     "        \n",
     "        gp=None\n",
     "        del gp\n",
@@ -217,7 +350,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-04-24T16:23:54.676Z"
+     "start_time": "2018-04-25T13:31:56.781Z"
     }
    },
    "outputs": [
@@ -225,22 +358,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ">> Grouping by ['ip'], and saving time to next click in: ip_nextClick\n",
-      ">> Grouping by ['app'], and saving time to next click in: app_nextClick\n",
-      ">> Grouping by ['device'], and saving time to next click in: device_nextClick\n",
-      ">> Grouping by ['ip', 'app'], and saving time to next click in: ip_app_nextClick\n",
-      ">> Grouping by ['ip', 'channel'], and saving time to next click in: ip_channel_nextClick\n",
-      ">> Grouping by ['ip', 'os'], and saving time to next click in: ip_os_nextClick\n",
-      ">> Grouping by ['ip', 'app', 'device', 'os', 'channel'], and saving time to next click in: ip_app_device_os_channel_nextClick\n",
-      ">> Grouping by ['ip', 'os', 'device'], and saving time to next click in: ip_os_device_nextClick\n",
-      ">> Grouping by ['ip', 'os', 'device', 'app'], and saving time to next click in: ip_os_device_app_nextClick\n",
-      ">> Grouping by ['ip', 'hour'], and saving time to next click in: ip_hour_nextClick\n",
-      ">> Grouping by ['ip', 'app', 'device', 'os', 'channel', 'hour'], and saving time to next click in: ip_app_device_os_channel_hour_nextClick\n"
+      "Grouping by ['ip'], and saving time to next click in: nc_ip\n"
      ]
     }
    ],
    "source": [
-    "add_time_to_next_click(GROUP_BY_NEXT_CLICKS)"
+    "add_time_to_next_click(GROUP_BY_NEXT_CLICKS_v1,df_train)\n",
+    "gc.collect()"
    ]
   },
   {
@@ -248,7 +372,114 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-04-24T16:24:33.400Z"
+     "start_time": "2018-04-25T13:32:04.299Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "add_time_to_next_click(GROUP_BY_NEXT_CLICKS_v2,df_train)\n",
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2018-04-25T13:32:05.967Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "test_df = dd.from_pandas(df_train[df_train.ip==83230].compute(),npartitions=4)\n",
+    "test_df.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2018-04-25T13:32:08.465Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "gc.collect()\n",
+    "df_train.to_hdf('data/train_2.h5',\"table\",mode='w')\n",
+    "gc.collect()\n",
+    "print(\"Train_2.h5 done\")\n",
+    "df_utils.count_nulls(df_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2018-04-25T13:32:25.247Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_train.head()\n",
+    "df_train = None\n",
+    "gc.collect()\n",
+    "del df_train\n",
+    "test_df = None\n",
+    "del test_df\n",
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2018-04-25T13:32:32.561Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_test = pd.read_hdf(\"data/test_1.h5\",\"table\")\n",
+    "df_test = dd.from_pandas(df_test.compute(),npartitions=64)\n",
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2018-04-25T13:32:35.841Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "add_time_to_next_click(GROUP_BY_NEXT_CLICKS_v1,df_test)\n",
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2018-04-25T13:32:36.888Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "add_time_to_next_click(GROUP_BY_NEXT_CLICKS_v2,df_test)\n",
+    "gc.collect()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2018-04-25T13:32:38.563Z"
     }
    },
    "outputs": [],
@@ -264,79 +495,17 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-04-24T16:25:06.085Z"
+     "start_time": "2018-04-25T13:32:55.760Z"
     }
    },
    "outputs": [],
    "source": [
-    "df_test.head()\n",
+    "\n",
     "df_test = None\n",
     "gc.collect()\n",
     "del df_test\n",
-    "gc.collect()\n",
-    "df_train.head()"
+    "gc.collect()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2018-04-24T16:25:11.316Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "gc.collect()\n",
-    "df_train.to_hdf('data/train_2.h5',\"table\",mode='w')\n",
-    "gc.collect()\n",
-    "print(\"Train_2.h5 done\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2018-04-24T16:25:13.350Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df_utils.count_nulls(df_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2018-04-20T21:33:59.493241Z",
-     "start_time": "2018-04-20T21:33:59.440411Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "18"
-      ]
-     },
-     "execution_count": 122,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gc.collect()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
