Correcting grad func for EDA talking data

--- a/kaggle/talkingdata-adtracking-fraud-detection/EDA-Features-Engg-2-1_time_to_next_click.ipynb
+++ b/kaggle/talkingdata-adtracking-fraud-detection/EDA-Features-Engg-2-1_time_to_next_click.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-25T13:07:08.230423Z",
-     "start_time": "2018-04-25T13:07:06.884253Z"
+     "end_time": "2018-04-25T13:51:06.168790Z",
+     "start_time": "2018-04-25T13:51:04.820772Z"
     }
    },
    "outputs": [],
@@ -86,21 +86,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-25T13:07:54.441077Z",
-     "start_time": "2018-04-25T13:07:20.763536Z"
+     "end_time": "2018-04-25T13:51:39.787776Z",
+     "start_time": "2018-04-25T13:51:06.170299Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "220"
+       "217"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,11 +125,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-25T13:07:54.453164Z",
-     "start_time": "2018-04-25T13:07:54.442261Z"
+     "end_time": "2018-04-25T13:51:39.798446Z",
+     "start_time": "2018-04-25T13:51:39.788886Z"
     }
    },
    "outputs": [],
@@ -172,23 +172,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-25T13:27:43.367152Z",
-     "start_time": "2018-04-25T13:27:43.312962Z"
+     "end_time": "2018-04-25T13:51:40.093133Z",
+     "start_time": "2018-04-25T13:51:39.799543Z"
     }
    },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.series.Series'>\n",
-      "<class 'pandas.core.series.Series'>\n",
-      "<class 'pandas.core.series.Series'>\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -273,7 +264,7 @@
        "5  2  20  1.0  1.0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,10 +275,11 @@
     "ddf = dd.from_pandas(pdf,npartitions=1)\n",
     "\n",
     "def differ(x):\n",
-    "    print(type(x.diff()))\n",
     "    return x.diff()\n",
     "\n",
     "def grad(x):\n",
+    "    if(x.size<=1):\n",
+    "        return pd.Series(0,index=x.index)\n",
     "    return pd.Series(np.gradient(x,axis=0),index=x.index)\n",
     "gp = ddf.groupby([\"A\"]).B\n",
     "a=gp.apply(differ).compute()\n",
@@ -304,11 +296,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-04-25T13:31:54.198630Z",
-     "start_time": "2018-04-25T13:31:54.173175Z"
+     "end_time": "2018-04-25T13:52:20.258523Z",
+     "start_time": "2018-04-25T13:52:20.228872Z"
     }
    },
    "outputs": [],
@@ -329,6 +321,8 @@
     "            return x.diff().shift(-1)\n",
     "        \n",
     "        def grad(x):\n",
+    "            if(x.size<=1):\n",
+    "                return pd.Series(np.nan,index=x.index)\n",
     "            return pd.Series(np.gradient(x,axis=0),index=x.index)\n",
     "        group = df.groupby(spec['groupby']).click_time\n",
     "        gp1 = group.apply(differ).compute()\n",
@@ -350,7 +344,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-04-25T13:31:56.781Z"
+     "start_time": "2018-04-25T13:52:27.561Z"
     }
    },
    "outputs": [
@@ -372,7 +366,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-04-25T13:32:04.299Z"
+     "start_time": "2018-04-25T13:52:28.918Z"
     }
    },
    "outputs": [],
@@ -386,7 +380,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-04-25T13:32:05.967Z"
+     "start_time": "2018-04-25T13:52:31.215Z"
     }
    },
    "outputs": [],
@@ -400,7 +394,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-04-25T13:32:08.465Z"
+     "start_time": "2018-04-25T13:52:33.938Z"
     }
    },
    "outputs": [],
@@ -417,7 +411,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-04-25T13:32:25.247Z"
+     "start_time": "2018-04-25T13:52:34.449Z"
     }
    },
    "outputs": [],
@@ -436,7 +430,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-04-25T13:32:32.561Z"
+     "start_time": "2018-04-25T13:52:35.203Z"
     }
    },
    "outputs": [],
@@ -451,7 +445,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-04-25T13:32:35.841Z"
+     "start_time": "2018-04-25T13:52:51.300Z"
     }
    },
    "outputs": [],
@@ -465,7 +459,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-04-25T13:32:36.888Z"
+     "start_time": "2018-04-25T13:52:51.818Z"
     }
    },
    "outputs": [],
@@ -479,7 +473,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2018-04-25T13:32:38.563Z"
+     "start_time": "2018-04-25T13:52:53.774Z"
     }
    },
    "outputs": [],
@@ -495,6 +489,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
+     "end_time": "2018-04-25T13:35:31.038679Z",
      "start_time": "2018-04-25T13:32:55.760Z"
     }
    },
