--- a/kaggle/talkingdata-adtracking-fraud-detection/EDA-Features-Engg-1.ipynb
+++ b/kaggle/talkingdata-adtracking-fraud-detection/EDA-Features-Engg-1.ipynb
@@ -7,7 +7,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-26T04:17:35.389525Z",
      "start_time": "2018-04-26T04:17:34.016125Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -91,7 +92,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-26T04:20:12.921994Z",
      "start_time": "2018-04-26T04:17:41.129543Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -106,7 +108,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-25T09:54:51.070922Z",
      "start_time": "2018-04-25T09:54:50.838448Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -176,7 +179,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-25T10:55:24.040461Z",
      "start_time": "2018-04-25T10:54:51.558301Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -221,7 +225,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-25T10:59:21.578021Z",
      "start_time": "2018-04-25T10:59:01.429357Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -235,7 +240,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-25T11:02:35.588070Z",
      "start_time": "2018-04-25T11:02:32.254779Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -250,7 +256,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-25T10:23:28.518848Z",
      "start_time": "2018-04-25T10:22:38.262648Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -266,7 +273,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-25T10:52:10.466258Z",
      "start_time": "2018-04-25T10:50:34.575535Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -286,7 +294,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-25T10:31:03.706286Z",
      "start_time": "2018-04-25T10:29:33.835Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": []
@@ -298,7 +307,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-25T11:07:52.188889Z",
      "start_time": "2018-04-25T11:05:50.252476Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -309,7 +319,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -331,16 +343,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.2"
   },
   "toc": {
-   "base_numbering": 1,
    "nav_menu": {},
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": false,
-   "title_cell": "Table of Contents",
-   "title_sidebar": "Contents",
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
