--- a/kaggle/talkingdata-adtracking-fraud-detection/Features-Engg-2-1_time_to_next_click-part4_file.ipynb
+++ b/kaggle/talkingdata-adtracking-fraud-detection/Features-Engg-2-1_time_to_next_click-part4_file.ipynb
@@ -7,7 +7,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-29T09:39:29.683976Z",
      "start_time": "2018-04-29T09:39:28.335534Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -227,7 +228,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-29T09:39:56.273322Z",
      "start_time": "2018-04-29T09:39:56.262883Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -266,7 +268,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-29T09:39:56.308664Z",
      "start_time": "2018-04-29T09:39:56.274467Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -503,16 +506,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.2"
   },
   "toc": {
-   "base_numbering": 1,
    "nav_menu": {},
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": false,
-   "title_cell": "Table of Contents",
-   "title_sidebar": "Contents",
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
