--- a/kaggle/talkingdata-adtracking-fraud-detection/EDA-Features-Engg-2-2_more_groupby_features.ipynb
+++ b/kaggle/talkingdata-adtracking-fraud-detection/EDA-Features-Engg-2-2_more_groupby_features.ipynb
@@ -7,7 +7,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-24T16:11:05.019345Z",
      "start_time": "2018-04-24T16:11:03.661741Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -121,7 +122,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-24T16:16:39.973232Z",
      "start_time": "2018-04-24T16:16:32.904875Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -284,7 +286,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-24T09:21:47.259228Z",
      "start_time": "2018-04-24T09:21:47.233605Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -333,7 +336,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-24T09:21:47.263788Z",
      "start_time": "2018-04-24T09:21:47.260241Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -367,7 +371,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-24T09:21:47.383023Z",
      "start_time": "2018-04-24T09:21:47.264761Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -483,7 +488,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-24T09:21:47.427574Z",
      "start_time": "2018-04-24T09:21:47.424623Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -608,7 +614,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-24T09:56:33.258895Z",
      "start_time": "2018-04-24T09:56:33.002805Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -761,7 +768,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-24T09:56:33.341348Z",
      "start_time": "2018-04-24T09:56:33.260075Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -995,7 +1003,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-24T13:53:58.900233Z",
      "start_time": "2018-04-24T13:53:58.898562Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1210,7 +1219,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-22T15:11:03.162677Z",
      "start_time": "2018-04-22T11:24:40.789Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1226,7 +1236,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-22T15:11:03.163212Z",
      "start_time": "2018-04-22T11:24:42.646Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1241,7 +1252,8 @@
     "ExecuteTime": {
      "end_time": "2018-04-22T15:11:03.163731Z",
      "start_time": "2018-04-22T11:24:45.646Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -1276,7 +1288,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -1298,16 +1312,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.2"
   },
   "toc": {
-   "base_numbering": 1,
    "nav_menu": {},
    "number_sections": true,
    "sideBar": true,
    "skip_h1_title": false,
-   "title_cell": "Table of Contents",
-   "title_sidebar": "Contents",
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
