--- a/upwork/bank_analysis/Bank-Analysis.ipynb
+++ b/upwork/bank_analysis/Bank-Analysis.ipynb
@@ -378,11 +378,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-08-18T18:13:41.055455Z",
-     "start_time": "2018-08-18T18:13:39.570302Z"
+     "end_time": "2018-08-18T18:17:56.129019Z",
+     "start_time": "2018-08-18T18:17:55.269400Z"
     }
    },
    "outputs": [
@@ -393,7 +393,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -403,7 +403,7 @@
        "True"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,7 +434,7 @@
     "\n",
     "# Show graph\n",
     "Image(img)\n",
-    "graph.write_pdf(\"tree.png\")"
+    "graph.write_pdf(\"tree.pdf\")"
    ]
   },
   {
